# InvoiceChain

./: .algokit.toml  .gitignore  .mcp.json  InvoiceChain.code-workspace  README.md  package-lock.json
.algokit/: .copier-answers.yml
projects/InvoiceChain-contracts/: .algokit.toml  README.md  package-lock.json  pyproject.toml
projects/InvoiceChain-contracts/.algokit/: .copier-answers.yml
projects/InvoiceChain-contracts/smart_contracts/artifacts/invoice/: Invoice.approval.puya.map  Invoice.approval.teal  Invoice.arc56.json  InvoiceClient.ts  invoice_client.py
projects/InvoiceChain-contracts/smart_contracts/artifacts/invoice_chain/: InvoiceChain.approval.puya.map  InvoiceChain.approval.teal  InvoiceChainClient.ts
projects/InvoiceChain-contracts/smart_contracts/invoice/: contract.py
projects/InvoiceChain-contracts/smart_contracts/invoice_chain/: contract.py  deploy-config.ts
projects/InvoiceChain-contracts/tests/: invoice_client_test.py
projects/InvoiceChain-frontend/: .algokit.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/InvoiceChain-frontend/.algokit/: .copier-answers.yml
projects/InvoiceChain-frontend/src/: App.tsx
projects/InvoiceChain-frontend/src/components/: AppCalls.tsx  BorrowFunds.tsx  Dashboard.tsx  MintInvoice.tsx  UploadInvoice.tsx  WalletConnect.tsx  WalletGate.tsx
projects/InvoiceChain-frontend/src/context/: InvoiceContext.tsx
projects/InvoiceChain-frontend/src/contracts/: Invoice.ts  InvoiceChain.ts
projects/InvoiceChain-frontend/src/hooks/: useRequireWallet.ts
(+14 files in other folders)
